k8s/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: plate
          image: lucasfernandesapp/plate:main
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
